Closed Bug 1706409 Opened 3 years ago Closed 3 years ago

Tab-crash allowing camera+microphone with MOZ_LOG=MediaManager:4

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

defect

Tracking

()

VERIFIED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox87 --- unaffected
firefox88 --- unaffected
firefox89 + verified
firefox90 - verified

People

(Reporter: jib, Assigned: jib)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

STRs:

  1. Go to https://jsfiddle.net/jib1/r60bzmrs/
  2. Allow camera

Expected results:

  • Video appears

Actual result:

[Tracking Requested - why for this release]: Tab crash on all camera/microphone/screen-share use on systems configured with WebRTC-specific developer-level logging (MOZ_LOG=MediaManager:4), caused by simple log-statement mistake.

Assignee: nobody → jib
Severity: -- → S3
Priority: -- → P2
Pushed by jbruaroey@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fc8e07caa633
Fix MediaManager log statement to not crash when starting media. r=ng
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9217141 [details]
Bug 1706409 - Fix MediaManager log statement to not crash when starting media. r?ng

Beta/Release Uplift Approval Request

  • User impact if declined: Cam/mic stops working and tab crashes instead, for users who have WebRTC-specific logging enabled on their system (MOZ_LOG=MediaManager:4)
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: https://jsfiddle.net/jib1/59og5vhn/
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple mistake in LOG statement due to refactor.
  • String changes made/needed:
Attachment #9217141 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Crash Signature: [@ mozilla::DeviceListener::Activate ]
Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: crash, regression

Comment on attachment 9217141 [details]
Bug 1706409 - Fix MediaManager log statement to not crash when starting media. r?ng

Low risk and a 89 regression, we are still early in the beta cycle, uplift approved for 89 Beta 3, thanks.

Attachment #9217141 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Hi Jan,

I'm trying to verify the fix but I'm not sure how to enable WebRTC-specific logging on my system (MOZ_LOG=MediaManager:4)
Could you help me out with some steps on how to do this ?

Thank you!

Flags: needinfo?(jib)

The simplest is probably from a Terminal, e.g. on macOS:

★ ~ $ export MOZ_LOG=MediaManager:4
★ ~ $ /Applications/Firefox\ Nightly.app/Contents/MacOS/firefox

You might also be able to set MediaManager:4 from the about:networking#logging page

LMK if you're having trouble.

Flags: needinfo?(jib)

I was able to reproduce the issue on Beta 89.0b2 (20210420191345) and I've verified the fix on Nightly 90.0a1 (20210422093115)
I'll be back to verify it when it gets uplifted to 89 Beta 3.

Thanks for the extra steps Jan!

I've also verified the fix on Beta 89.0b3 (20210422190146)

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: