Bug 1706409 - Fix MediaManager log statement to not crash when starting media. r=ng a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D112791